methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:46: error: not found: value growFLowers
def growLine() {growFLowers()
                ^FlowerCase:55: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
def run() {
    ^